REMS-Salesforce/force-app/main/default/objects/Training_Certification__c/Training_Certification__c.object-meta.xml
<CustomObject>
    <description>Tracks training status of a Prescriber under a specific Program</description>
    <label>Training Certification</label>
    <nameField>
        <label>Training Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>