REMS-Salesforce/force-app/main/default/objects/Training_Certification__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <label>Completion Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>