REMS-Salesforce/force-app/main/default/objects/Training_Certification__c/fields/Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Prescriber__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Who Completed the Training</description>
    <label>Prescriber</label>
    <referenceTo>Prescriber__c</referenceTo>
    <relationshipLabel>Training Certifications</relationshipLabel>
    <relationshipName>Training_Certifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>