REMS-Salesforce/force-app/main/default/objects/Training_Certification__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Training Certifications</relationshipLabel>
    <relationshipName>Training_Certifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>