REMS-Salesforce/force-app/main/default/objects/Training_Certification__c/fields/Training_Name__c.field-meta.xml
<CustomField>
    <fullName>Training_Name__c</fullName>
    <description>REMS Risk Education</description>
    <label>Training Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>