REMS-Salesforce/force-app/main/default/objects/Training_Certification__c/fields/Valid_Through__c.field-meta.xml
<CustomField>
    <fullName>Valid_Through__c</fullName>
    <label>Valid Through</label>
    <type>Date</type>
</CustomField>